Change Csv to Xls

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PontoSysDB": "Data Source=DESKTOP-919QLP9;Initial Catalog=pontosys;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "PontoSysDB": "Data Source=\"localhost, 1433\";Initial Catalog=pontosys;Integrated Security=True"
   }
 }
