--- a/pontosys.csproj
+++ b/pontosys.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="ExcelMapper" Version="5.2.383" />
+    <PackageReference Include="FluentValidation" Version="10.4.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3">
       <PrivateAssets>all</PrivateAssets>
